@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Modern
           - new --dump-identifiers option in json-schema-eval executable
           - the document form of 'add_schema' has been extracted out into
             'add_document', with the old form deprecated
+          - is_equal() utility function, and the const and enum keywords, now
+            provide more detailed error diagnostics
 
 0.590     2024-09-07 00:48:50Z
           - "strict" mode is now recognized by validate_schema(), to report on
